force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/clofor_com_cfs__CustomObject1__c.object-meta.xml
<CustomObject>
    <customHelpPage>clofor_com_cfs__page_HBLOnlineHelp</customHelpPage>
    <description>H B/L SHIPMENT</description>
    <label>F/TMS S/O</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>F/TMS S/O</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>