force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/Acountant_Check__c.field-meta.xml
<CustomField>
    <fullName>Acountant_Check__c</fullName>
    <inlineHelpText>全て内容確認できましたら、「案件完了」に変更する</inlineHelpText>
    <label>Accountant Check</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid to Vendor</fullName>
            </value>
            <value>
                <fullName>Received from Customer</fullName>
            </value>
            <value>
                <fullName>Made/Received payment from Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>