force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/AddressConsignee__c.field-meta.xml
<CustomField>
    <fullName>AddressConsignee__c</fullName>
    <formula>clofor_com_cfs__Cnee__r.clofor_com_cfs__EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address-Consignee</label>
    <type>Text</type>
</CustomField>