force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/AddressNotifyParty__c.field-meta.xml
<CustomField>
    <fullName>AddressNotifyParty__c</fullName>
    <formula>clofor_com_cfs__Notifyparty__r.clofor_com_cfs__EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address-Notify Party</label>
    <type>Text</type>
</CustomField>