force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/AgentsContacts__c.field-meta.xml
<CustomField>
    <fullName>AgentsContacts__c</fullName>
    <label>Agent&apos;s Contacts</label>
    <type>TextArea</type>
</CustomField>