force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/AgentsEmail__c.field-meta.xml
<CustomField>
    <fullName>AgentsEmail__c</fullName>
    <formula>IF( 
OR(
RecordType.DeveloperName = &apos;RecordType1&apos;,RecordType.DeveloperName = &apos;InAir&apos;),
clofor_com_cfs__DeliveryAgent__r.CC_Import__c,
clofor_com_cfs__DeliveryAgent__r.CC_for_EXP__c)</formula>
    <label>Agent&apos;s Email</label>
    <type>Text</type>
</CustomField>