force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <length>50</length>
    <type>Text</type>
</CustomField>