force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <inlineHelpText>Input information which will be displayed in Attachment sheet</inlineHelpText>
    <label>Attachment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>