force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/CarrierCodeAFR__c.field-meta.xml
<CustomField>
    <fullName>CarrierCodeAFR__c</fullName>
    <formula>IF( TEXT(clofor_com_cfs__MultiTransitRequired__c) &lt;&gt; &apos;No&apos;,  clofor_com_cfs__BREAL_BULK_INVOICE_PASSWORD__c  ,  clofor_com_cfs__CarrierCode__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Code AFR</label>
    <type>Text</type>
</CustomField>