force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/CarrierCodeMBL__c.field-meta.xml
<CustomField>
    <fullName>CarrierCodeMBL__c</fullName>
    <formula>CarrierCodeAFR__c  + clofor_com_cfs__Master_B_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Code+MBL</label>
    <type>Text</type>
</CustomField>