force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/ClickCount__c.field-meta.xml
<CustomField>
    <fullName>ClickCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ClickCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>