force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__A_N_LINK__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__A_N_LINK__c</fullName>
    <inlineHelpText>Paste the link for A/N generated in &apos;Content Deliveries&apos;. Also paste the password from Content Deliveries into &apos;A/N PASSWORD&apos;</inlineHelpText>
    <label>A/N LINK</label>
    <type>Url</type>
</CustomField>