force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__A_N_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__A_N_PASSWORD__c</fullName>
    <label>ACI CCN code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>