force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__A_O_D_CODE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__A_O_D_CODE__c</fullName>
    <description>POL (A.O.D) CODE</description>
    <formula>clofor_com_cfs__POL__r.clofor_com_cfs__CodeOfPort__c</formula>
    <inlineHelpText>POL (A.O.D) CODE</inlineHelpText>
    <label>A.O.D CODE</label>
    <type>Text</type>
</CustomField>