force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Account_Cnee_Eng_name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account_Cnee_Eng_name__c</fullName>
    <formula>clofor_com_cfs__Cnee__r.clofor_com_cfs__EnglishCompanyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Cnee Eng name</label>
    <type>Text</type>
</CustomField>