force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__AccountNO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountNO__c</fullName>
    <label>BANK/POSTPONE ACCOUNT FOR TAX PAYMENT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>