force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ADDRESS_ON_B_L__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ADDRESS_ON_B_L__c</fullName>
    <inlineHelpText>Input the Address for L/C or special case when Address on B/L is different from English Address.</inlineHelpText>
    <label>SHIPPER ADDRESS ON B/L</label>
    <type>TextArea</type>
</CustomField>