force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__alert_email__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__alert_email__c</fullName>
    <formula>clofor_com_cfs__Field1__r.clofor_com_cfs__mail__c</formula>
    <label>EMAIL TO</label>
    <type>Text</type>
</CustomField>