force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__AlertDebitIssuedBefore__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AlertDebitIssuedBefore__c</fullName>
    <inlineHelpText>Input number of Working day from Delivery Date</inlineHelpText>
    <label>Alert Debit Issued After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>