force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__AmountTaxSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountTaxSellingFCY__c</fullName>
    <label>Amount of Tax-Selling(FCY)</label>
    <summarizedField>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__SellTaxNum_USD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>