force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ANRemark__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ANRemark__c</fullName>
    <label>A/N Remark</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>