force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ApprovedTotalAmountBuyingInclTax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApprovedTotalAmountBuyingInclTax__c</fullName>
    <label>Approved-Total Amount of Buying With Tax</label>
    <summarizedField>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__BuyInTaxAmountJPY__c</summarizedField>
    <summaryFilterItems>
        <field>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__ApprovaStatusForBuying__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>