force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__AS_AGENT_FOR_CARRIER_ON_BL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AS_AGENT_FOR_CARRIER_ON_BL__c</fullName>
    <defaultValue>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__AS_AGENT_FOR_CARRIER_1__c
&amp; BR() &amp; 
$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__AS_AGENT_FOR_CARRIER_2__c</defaultValue>
    <inlineHelpText>The Filed is synchronized from As Agent For Carrier 1 and As Agent For Carrier 2 at CloSCM Initial Setting. If you want you change the field, please edit at CloSCM Initial Setting.</inlineHelpText>
    <label>AS AGENT FOR CARRIER ON B\L</label>
    <type>TextArea</type>
</CustomField>