force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__B_L_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__B_L_PASSWORD__c</fullName>
    <label>CONSIGNEE&apos;S ADDRESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>