force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BadDebtUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtUSD__c</fullName>
    <label>BAD DEBT(USD)</label>
    <summarizedField>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__UNPAID_BALANCE_OF_SELLING_USD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>