force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BillNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillNumber__c</fullName>
    <label>INVOICE NUMBER</label>
    <length>20</length>
    <type>Text</type>
</CustomField>