force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BL_TYPE__c</fullName>
    <label>B/L TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H B/L Issue Required</fullName>
                <default>true</default>
                <label>H B/L Issue Required</label>
            </value>
            <value>
                <fullName>Direct M B/L(H B/L Issue Not Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>