force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BookingNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BookingNo__c</fullName>
    <label>BOOKING NO</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>