force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Branch__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Branch__c</fullName>
    <label>BRANCH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__BranchName</valueSetName>
    </valueSet>
</CustomField>