force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BREAK_BULK_INVOICE_LINK__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BREAK_BULK_INVOICE_LINK__c</fullName>
    <label>BB Invoice Link</label>
    <type>Url</type>
</CustomField>