force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BREAL_BULK_INVOICE_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BREAL_BULK_INVOICE_PASSWORD__c</fullName>
    <label>Transit Carrier Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>