force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BuyDifferentiation_sum2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyDifferentiation_sum2__c</fullName>
    <formula>clofor_com_cfs__BuyInTaxAmountJPY_sum__c -  clofor_com_cfs__Siharaigaku_sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>