force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BuyDifferentiation_sum__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyDifferentiation_sum__c</fullName>
    <inlineHelpText>Accumulated amount of Buying from H B/L S/B</inlineHelpText>
    <label>UNPAID BALANCE OF BUYING(CHECKING)</label>
    <summarizedField>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__BuyDifferentiation__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__Anken__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>