force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BUYING__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BUYING__c</fullName>
    <inlineHelpText>Exchange Rate for Buying</inlineHelpText>
    <label>EXCHANGE RATE FOR BUYING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>