force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__BuyingAccount__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingAccount__c</fullName>
    <label>AMOUNT OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>