force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__C_W_Dimension_dev__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__C_W_Dimension_dev__c</fullName>
    <label>C.W(Dimension)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>