force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CARGO_CLOSING_TIME__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CARGO_CLOSING_TIME__c</fullName>
    <inlineHelpText>Deadline for cargo delivered into CY or CFS Warehouse</inlineHelpText>
    <label>CARGO CLOSING TIME</label>
    <type>DateTime</type>
</CustomField>