force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__cargo_tracking_site__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__cargo_tracking_site__c</fullName>
    <formula>clofor_com_cfs__BookingNv__r.clofor_com_cfs__cargo_tracking_site__c</formula>
    <label>CARGO TRACKING SITE OF CARRIER</label>
    <type>Text</type>
</CustomField>