force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CARGO_TYPE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CARGO_TYPE__c</fullName>
    <label>CARGO TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CY/CY</fullName>
            </value>
            <value>
                <fullName>CFS/CFS</fullName>
            </value>
            <value>
                <fullName>CY/CFS</fullName>
            </value>
            <value>
                <fullName>CFS/CY</fullName>
            </value>
            <value>
                <fullName>FCL/FCL</fullName>
            </value>
            <value>
                <fullName>LCL/LCL</fullName>
            </value>
            <value>
                <fullName>FCL/LCL</fullName>
            </value>
            <value>
                <fullName>LCL/FCL</fullName>
            </value>
            <value>
                <fullName>FI/CY</fullName>
            </value>
            <value>
                <fullName>CY/FO</fullName>
            </value>
            <value>
                <fullName>FI/FO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>