force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CargoOwnershipType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoOwnershipType__c</fullName>
    <label>CARGO OWNERSHIP TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CARGO_OWNERSHIP_TYPE</valueSetName>
    </valueSet>
</CustomField>