force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CarrierCodeMBLNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CarrierCodeMBLNo__c</fullName>
    <label>Carrier Code+M B/L No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>