force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__carton__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__carton__c</fullName>
    <inlineHelpText>Synchronized with Sum of Cargo Quantity in CNTR IN TRANS When below conditions meet; Container Mode is FCL, Container Type and Container Q&apos;ty are not null, Cargo Quantity in CNTR IN TRANS is not Null.</inlineHelpText>
    <label>QUANTITY(TOTAL PACKAGES)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>