force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__chargable_weight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__chargable_weight__c</fullName>
    <label>CHARGABLE WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>