force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CHECK_B_L_LINK__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CHECK_B_L_LINK__c</fullName>
    <inlineHelpText>Paste the link for Check B/L generated in &apos;Content Deliveries&apos;. Also paste the password from Content Deliveries into &apos;Check B/L Password&apos;</inlineHelpText>
    <label>CHECK B/L LINK</label>
    <type>Url</type>
</CustomField>