force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Cnee__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Cnee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cnee</relationshipName>
    <type>Lookup</type>
</CustomField>