force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__CNEE_ADDRESS_ON_B_L__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CNEE_ADDRESS_ON_B_L__c</fullName>
    <inlineHelpText>Input the CNEE company name and Address for B/L or special case when Address on B/L is different from English Address.</inlineHelpText>
    <label>CNEE ADDRESS ON B/L</label>
    <type>TextArea</type>
</CustomField>