force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__cnt__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__cnt__c</fullName>
    <label>NUMBER OF H B/L INVOICE DETAIL</label>
    <summaryForeignKey>clofor_com_cfs__AnkenMeisai__c.clofor_com_cfs__Anken__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>