force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Co_loader__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Co_loader__c</fullName>
    <label>Co-loader</label>
    <type>TextArea</type>
</CustomField>