force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Company_Info__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Company_Info__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Name__c
&amp; BR() &amp; 
$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Address__c
&amp; BR() &amp; 
&quot;TEL: &quot;&amp; $Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Phone__c
&amp; BR() &amp; 
&quot;FAX: &quot;&amp; $Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Fax__c</formula>
    <label>WK.COMPANY INFORMATION</label>
    <type>Text</type>
</CustomField>