force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ConsigneeCountryCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ConsigneeCountryCode__c</fullName>
    <formula>text( clofor_com_cfs__Cnee__r.clofor_com_cfs__BillingCountryCode__c )</formula>
    <label>Consignee Country Code</label>
    <type>Text</type>
</CustomField>