force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ConsigneeEnglishCompanyName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ConsigneeEnglishCompanyName__c</fullName>
    <formula>clofor_com_cfs__Cnee__r.clofor_com_cfs__EnglishCompanyName__c 
&amp; BR() &amp; 
clofor_com_cfs__Cnee__r.clofor_com_cfs__EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONSIGNEE COMPANY NAME</label>
    <type>Text</type>
</CustomField>