force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ConsigneePhone__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ConsigneePhone__c</fullName>
    <formula>clofor_com_cfs__Cnee__r.Phone</formula>
    <label>Consignee Phone</label>
    <type>Text</type>
</CustomField>