force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__ConsigneeRep__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ConsigneeRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF CONSIGNEE</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__Cnee__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>F/TMS S/O (PIC OF CONSIGNEE)</relationshipLabel>
    <relationshipName>ConsigneeRep</relationshipName>
    <type>Lookup</type>
</CustomField>