force-app/main/default/objects/clofor_com_cfs__CustomObject1__c/fields/clofor_com_cfs__Container_Details_SL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Container_Details_SL__c</fullName>
    <inlineHelpText>Automatically synchronize with Container No/Seal No/Container Size(Package/Gross/Measurement/Good Description) from Container Detail section at bottom.
Also allow for direct input only when need to be amended manually. This Data will be appeared at S/I.</inlineHelpText>
    <label>CONTAINER DETAIL ON S/I</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>